--- a/style.css
+++ b/style.css
@@ -105,6 +105,12 @@ h4{
 p{
    font-size: 18px;
 }
+.p22{
+   font-size: 22px;
+}
+.p20{
+   font-size: 20px;
+}
 
 .red{
    color: red;
@@ -446,6 +452,7 @@ label{
 }
 .line_1{
    width: 100px;
+   font-size: 22px;
 }
 .line_2{
    width: 150px;
@@ -457,6 +464,11 @@ label{
 }
 .line_4{
    width: 40px;
+   font-size: 24px;
+}
+.line_5{
+   width: 30px;
+   font-size: 20px;
 }
 .dialog{
    width: 100%;
