--- a/style.css
+++ b/style.css
@@ -4,9 +4,13 @@
     box-sizing: border-box;
 }
 
+body{
+   padding: 2%;
+}
 .wrapper{
     max-width: 1400px;
     margin: 0 auto;
+
 }
 /* ====== HEADER ================ */
 header{
@@ -178,6 +182,7 @@ p{
     grid-template-columns: 1fr 1fr;
     gap: 10px;
     margin: 0 auto;
+    margin-left: 3%;
  }
  .two div{
    /* justify-content: center; */
