--- a/style.css
+++ b/style.css
@@ -115,7 +115,12 @@ p{
 .p20{
    font-size: 20px;
 }
-
+.p18{
+   font-size: 18px;
+}
+.p16{
+   font-size: 16px;
+}
 .red{
    color: red;
 }
@@ -475,7 +480,7 @@ label{
 }
 .line_1{
    width: 100px;
-   font-size: 22px;
+   font-size: 20px;
 }
 .line_2{
    width: 150px;
@@ -571,7 +576,14 @@ input {
    display: flex;
    gap: 10px;
    align-items: center;
+   justify-content: space-between;
 }
+.boxRadio{
+   margin-right: 5px;
+   width: 30%;
+   text-align: right;
+}
+
 
 .raspisanie{
    display: flex;
