--- a/style.css
+++ b/style.css
@@ -181,16 +181,19 @@ p{
     height: 20px;
  }
  /* ======================== */
-
+/* .two{
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+} */
  .two{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    justify-content: space-around;
     gap: 10px;
     margin: 0 auto;
     margin-left: 3%;
  }
  .two div{
-   /* justify-content: center; */
+  width: 100%;
  }
  .two img{
     max-width: 100%;
@@ -492,10 +495,14 @@ label{
 }
 .line_4{
    width: 40px;
-   font-size: 24px;
+   font-size: 22px;
 }
 .line_5{
    width: 30px;
+   font-size: 20px;
+}
+.line6{
+   width: 50px;
    font-size: 20px;
 }
 .dialog{
@@ -505,7 +512,7 @@ label{
 /* div flex */
 .colors{
    display: flex;
-   width: 90%;
+   width: 100%;
    gap: 2px;
    margin-top: 3px;
 }
@@ -537,6 +544,7 @@ button{
 .option {
    cursor: pointer;
    margin-top: 2%;
+  
 }
 
 .selected {
@@ -577,11 +585,14 @@ input {
    gap: 10px;
    align-items: center;
    justify-content: space-between;
+   
 }
 .boxRadio{
-   margin-right: 5px;
+   margin-right: 1px;
    width: 30%;
    text-align: right;
+   display: flex;
+
 }
 
 
