--- a/style.css
+++ b/style.css
@@ -547,7 +547,7 @@ button{
    gap: 1px;
    /* Разрыв между вариантами */
    font-size: 20px;
-
+   
 }
 
 .option {
@@ -596,6 +596,13 @@ input {
    justify-content: space-between;
    
 }
+.option.correct {
+   background-color: #c8e6c9; /* Зелёный фон для правильного ответа */
+}
+
+.option.incorrect {
+   background-color: #ffcdd2; /* Красный фон для неправильного ответа */
+}
 .boxRadio{
    margin-right: 1px;
    width: 30%;
@@ -604,7 +611,7 @@ input {
 
 }
 
-
+/* ---------------- */
 .raspisanie{
    display: flex;
    flex-direction: column;
@@ -614,6 +621,7 @@ input {
    display: flex;
    gap: 2px;
    width: 1200px;
+   align-items: flex-end;
 }
 .flex{
    display: flex;
