--- a/style.css
+++ b/style.css
@@ -181,6 +181,9 @@ p{
 .text20 input{
    font-size: 20px;
 }
+.textTitle{
+   width: 60%; margin: 0 auto; line-height: 1.5;
+}
 
 /* FON */
 .niebieski{
